--- a/style/style.css
+++ b/style/style.css
@@ -111,7 +111,7 @@ header div{
 }
 
 #about{
-	background:url('../image/myImg.jpg') no-repeat; 
+	background:url('../image/imgmy.jpg') no-repeat; 
 	background-size: cover;
 }
 
